--- a/templates/chat.html
+++ b/templates/chat.html
@@ -17,15 +17,18 @@
     <!-- Handlebars -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script id="displaychannel" type="text/x-handlebars-template">
-        <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
-        <div class="media"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
-        <div class="media-body ml-4">
-        <div class="d-flex align-items-center justify-content-between mb-1">
-            <h6 class="mb-0">{{ newchannel }}</h6><small class="small font-weight-bold"></small>
-        </div>
-            <p class="font-italic text-muted mb-0 text-small"></p>
-        </div>
-        </a>
+	    	{% raw %}
+                <a onclick="select_channel(this)" class="list-group-item list-group-item-action list-group-item-light rounded-0">
+                <div class="media"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+                    <div class="media-body ml-4">
+                    <div class="d-flex align-items-center justify-content-between mb-1">
+			        <h6 class="mb-0"> {{channel}} </h6><small class="small font-weight-bold">14 Dec</small>
+                    </div>
+		            <p class="font-italic text-muted mb-0 text-small"></p>
+                    </div>
+                </div>
+                </a>
+            {% endraw %}
     </script>
     
     </head>
@@ -83,27 +86,6 @@
 
             <div class="messages-box">
             <div class="list-group rounded-0">
-                <a class="list-group-item list-group-item-action active text-white rounded-0">
-                <div class="media"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
-                    <div class="media-body ml-4">
-                    <div class="d-flex align-items-center justify-content-between mb-1">
-                        <h6 class="mb-0">Jason Doe</h6><small class="small font-weight-bold">25 Dec</small>
-                    </div>
-                    <p class="font-italic mb-0 text-small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                    </div>
-                </div>
-                </a>
-
-                <a href="#" class="list-group-item list-group-item-action list-group-item-light rounded-0">
-                <div class="media"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
-                    <div class="media-body ml-4">
-                    <div class="d-flex align-items-center justify-content-between mb-1">
-                        <h6 class="mb-0">Jason Doe</h6><small class="small font-weight-bold">14 Dec</small>
-                    </div>
-                    <p class="font-italic text-muted mb-0 text-small">Lorem ipsum dolor sit amet, consectetur. incididunt ut labore.</p>
-                    </div>
-                </div>
-                </a>
 
             </div>
             </div>
@@ -146,10 +128,12 @@
 
     </div>
     </div>
+
     <script>
         var socket = io.connect('http://' + document.domain + ':' + location.port); 
 
         socket.on('connect', () => {
+        //Add new channel
             var button = document.querySelector('#channelsubmit');
             console.log(button);
             button.onclick = () => {
@@ -157,16 +141,38 @@
                 console.log(newchannel);
                 document.querySelector('#channeltext').value = '';
                 socket.emit('createchannel', {"newchannel": newchannel});
-            }
+            };
         });
 
+        //Display available channels when page loads
+        socket.on('displayavailchannels', (data) => {
+            const channels = data['channels'];
+            console.log(channels);
+            channels.forEach((channel) => {
+                display_channel(channel);
+            })
+            });
+
+        //Display new channel when created
         socket.on('displaynewchannel', (data) => {
             const newchannel = data['displaynewchannel'];
             console.log(newchannel);
-            const template = Handlebars.compile(document.querySelector('#displaychannel').innerHTML);
-            const content = template({'newchannel': newchannel});
-            document.querySelector('.messages-box').innerHTML += content;
+            display_channel(newchannel);
         });
+
+        //Function to display channel
+        function display_channel(channel) {
+            const template = Handlebars.compile(document.querySelector('#displaychannel').innerHTML);
+            const content = template({'channel': channel});
+            document.querySelector('.list-group').innerHTML += content; 
+        }
+
+        //Function for selecting a channel when clicked
+        function select_channel(content) {
+            const currentchannel = content.querySelector('h6').innerHTML;
+            localStorage.setItem('currentchannel', currentchannel);
+            socket.emit('joinchannel', {'currentchannel':currentchannel});
+        }
 
     </script>
     </body>
