--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -22,7 +22,7 @@
               <div class="media"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
                 <div class="media-body ml-4">
                   <div class="d-flex align-items-center justify-content-between mb-1">
-                    <h6 class="mb-0">{{channel}}</h6><small class="small font-weight-bold">Channel</small>
+                    <h6 class="mb-0">{{channel}}</h6><small class="small font-weight-bold">{{date}}</small>
                   </div>
                 </div>
               </div>
@@ -33,12 +33,12 @@
 
     <script id="displaymessage-sender" type="text/x-handlebars-template">
         {% raw %}
-        <div class="media w-50 mb-3"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
+        <div id="m{{id}}" class="media w-50 mb-3"><img src="https://res.cloudinary.com/mhmd/image/upload/v1564960395/avatar_usae7z.svg" alt="user" width="50" class="rounded-circle">
         <div class="media-body ml-3">
             <div class="bg-light rounded py-2 px-3 mb-2">
             <p class="text-small mb-0 text-muted">{{message}}</p>
             </div>
-            <p class="small text-muted">{{userid}} | {{date}}</p>
+            <p class="small text-muted">{{userid}} | {{date}} | <button id="{{id2}}" class="btn btn-default" onclick="hide_message(this)">X</button></p>
         </div>
         </div>
         {% endraw %}
@@ -46,12 +46,12 @@
 
     <script id="displaymessage-receiver" type="text/x-handlebars-template">
         {% raw %}
-        <div class="media w-50 ml-auto mb-3">
+        <div id="m{{id}}" class="media w-50 ml-auto mb-3">
         <div class="media-body">
             <div class="bg-primary rounded py-2 px-3 mb-2">
             <p class="text-small mb-0 text-white">{{message}}</p>
             </div>
-            <p class="small text-muted">{{userid}} | {{date}}</p>
+            <p class="small text-muted">{{userid}} | {{date}} | <button id="{{id2}}" class="btn btn-default" onclick="hide_message(this)">X</button></p>
         </div>
         </div>
         {% endraw %}
